--- a/style.css
+++ b/style.css
@@ -14,17 +14,44 @@
 }
 
 nav{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   background-color: var(--darker-color);
   color: var(--bg-color);
+  height: 88px;
+}
+
+nav a{
+  font-size: 26px;
+  color: var(--bg-color);
+  padding: 10px;
 }
 
 header{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: var(--secondary-color);
+  height: 460px;
 }
 
 footer{
   background-color: var(--darker-color);
   color: var(--bg-color);
+}
+
+h1{
+  font-size: 80px;
+  font-weight: 100;
+}
+
+input{
+  width: 700px;
+  height: 70px;
+  color: var(--secondary-color);
+  margin-top: 30px;
 }
 
 a{
@@ -55,10 +82,47 @@ h4{
   margin-bottom: 20px;
 }
 
+.logoSvg{
+  width: 40px;
+  height: 40px;
+  margin: auto 0;
+}
+
+#signInBtn{
+  background-color: var(--primary-color);
+  color: var(--bg-color);
+  padding: 10px 32px;
+  border: 1px solid var(--primary-color);
+  border-radius: 8px;
+}
+
+#submitReqBtn{
+  background: #191a1b;
+  color: var(--bg-color);
+  padding: 10px 28px;
+  border: 1px solid var(--bg-color);
+  border-radius: 8px;
+}
+
+#navBtnsContainer{
+  display: flex;
+  gap: 15px;
+}
+
+#navLogoContainer{
+  display: flex;
+  justify-content: center;
+}
+
+#helpCenter{
+  border-left: 2px solid var(--bg-color);
+}
+
 #cardsContainer{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin: 8rem 0 4rem 0;
 }
 
 #footerContainer{
