--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ nav{
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin: 0 -400px;
   background-color: var(--darker-color);
   color: var(--bg-color);
   height: 88px;
@@ -41,6 +40,8 @@ header{
 footer{
   background-color: var(--darker-color);
   color: var(--bg-color);
+  padding-bottom: 60px;
+  display: flex;
 }
 
 h1{
@@ -61,6 +62,11 @@ img{
   margin-top: 8px;
 }
 
+h3{
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+
 h4{
   margin-bottom: 20px;
 }
@@ -72,6 +78,20 @@ form{
   border-radius: 5px;
   border: 1px solid #393a3b;
   box-shadow:0 9px 14px 0 rgba(0, 0, 0, 0.1)
+}
+
+ul li{
+  list-style: none;
+  margin-left: -20px;
+}
+
+ul li a{
+  color: var(--bg-color);
+}
+
+ul li a:hover{
+  color: var(--bg-color);
+  text-decoration: underline;
 }
 
 .card{
@@ -130,6 +150,9 @@ form{
 
 #footerContainer{
   display: flex;
+  justify-content: space-around;
+  padding-bottom: 100px;
+  padding-top: 50px;
 }
 
 #search{
@@ -138,12 +161,35 @@ form{
   height: 70px;
   border: none;
   border-radius: 5px;
-  /*box-shadow:0 9px 14px 0 rgba(0, 0, 0, 0.1);*/
 }
 
 #arrowSvg{
   width: 28px;
   margin-right: 10px;
+}
+
+#questionSvg{
+  fill: #fff;
+}
+
+#contactUsTitle{
+  margin-left: -20px;
+  margin-top: 30px;
+}
+
+#logoSvgFooter{
+  margin-bottom: 20px;
+}
+
+#helpBtnContainer{
+  position:sticky;
+  bottom: 0px;
+}
+
+#helpBtnContainer button{
+  background-color: var(--primary-color);
+  color: var(--bg-color);
+  padding: 10px 20px;
 }
 
 @font-face {
